--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5"
   },
