--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URL=mongodb+srv://nadeem905237:1AmbATmAn@cluster0.lvr4i.mongodb.net/StackFlow?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=Your Mongo Link  here
